--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
     - EXTRA_REMOTES="https://github.com/mirage/mirage-dev.git"
     - TESTS=false
-    - PINS="lwt.dev:https://github.com/mirage/lwt.git#tracing mirage-profile:https://github.com/mirage/mirage-profile.git"
+    - PINS="lwt.dev:https://github.com/mirage/lwt.git#tracing mirage-profile:https://github.com/mirage/mirage-profile.git mirage-clock:https://github.com/yomimono/mirage-clock.git#oasis-cclib-dep mirage:https://github.com/yomimono/mirage.git#link-order-clock"
     - WITH_TRACING=1
   matrix:
     - OCAML_VERSION=4.03 POST_INSTALL_HOOK="make MODE=unix && make testrun SUDO=sudo && make clean"
