--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ env:
   matrix:
     - OCAML_VERSION=4.03 POST_INSTALL_HOOK="make MODE=unix && make testrun SUDO=sudo && make clean"
     - OCAML_VERSION=4.03 UPDATE_GCC_BINUTILS=1 POST_INSTALL_HOOK="make MODE=xen  && make clean"
+    - OCAML_VERSION=4.03 UPDATE_GCC_BINUTILS=1 POST_INSTALL_HOOK="make MODE=ukvm && make clean"
+    - OCAML_VERSION=4.03 UPDATE_GCC_BINUTILS=1 POST_INSTALL_HOOK="make MODE=virtio && make clean"
