--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ env:
   global:
     - EXTRA_REMOTES="https://github.com/mirage/mirage-dev.git"
     - TESTS=false
-    - PINS="lwt.dev:https://github.com/mirage/lwt.git#tracing mirage-profile:https://github.com/mirage/mirage-profile.git"
+    - PINS="lwt.dev:https://github.com/mirage/lwt.git#tracing mirage-profile:https://github.com/mirage/mirage-profile.git mirage-vnetif:https://github.com/yomimono/mirage-vnetif.git#topkg"
     - WITH_TRACING=1
   matrix:
     - OCAML_VERSION=4.03 POST_INSTALL_HOOK="make MODE=unix && make testrun SUDO=sudo && make clean"
     - OCAML_VERSION=4.03 UPDATE_GCC_BINUTILS=1 POST_INSTALL_HOOK="make MODE=xen  && make clean"
-    - OCAML_VERSION=4.02 POST_INSTALL_HOOK="make MODE=unix && make testrun SUDO=sudo && make clean"
-    - OCAML_VERSION=4.02 UPDATE_GCC_BINUTILS=1 POST_INSTALL_HOOK="make MODE=xen  && make clean"
