temporarily remove lwt tracing pin

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: required
 env:
   global:
     - TESTS=false
-    - PINS="lwt.dev:https://github.com/mirage/lwt.git#tracing"
+# mcp - removing tracing pin until https://github.com/mirage/mirage-skeleton/issues/237 is fixed   - PINS="lwt.dev:https://github.com/mirage/lwt.git#tracing"
     - UPDATE_GCC_BINUTILS=1
   matrix:
     - OCAML_VERSION=4.03 WITH_TRACING=1 POST_INSTALL_HOOK="make MODE=unix && make testrun SUDO=sudo && make clean"
